Italiano e fixed total amount
Italiano e fixed total amount

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/supermarket.loader.js";
+      var loaderUrl = buildUrl + "/Supermarket.loader.js";
       var config = {
-        dataUrl: buildUrl + "/supermarket.data",
-        frameworkUrl: buildUrl + "/supermarket.framework.js",
-        codeUrl: buildUrl + "/supermarket.wasm",
+        dataUrl: buildUrl + "/Supermarket.data",
+        frameworkUrl: buildUrl + "/Supermarket.framework.js",
+        codeUrl: buildUrl + "/Supermarket.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Supermercato",
